# CCircus

./: .gitattributes  .gitignore  BUILD_GUIDE.md  CATALOG.md  CircuitCircus.md  INDEX_FORMAT.md  MANIFEST_FORMAT.md  README.md  index.html  pyproject.toml  registry.json
.github/workflows/: pr.yml  publish.yml
index/: arith.json  clock.json  code.json  gates.json  mux.json  seq.json  shift.json
tools/: cc.py
web/: __init__.py  app.py  catalog.py  serve.py
web/static/: style.css
web/templates/: base.html  circuit.html  index.html  library.html  not_found.html  search.html
